<resources>
    <string name="app_name">AsiaRegion</string>
    <string name="capital">Capital</string>
    <string name="_0">0</string>
    <string name="borders">Border(s)</string>
    <string name="languages">Language(s)</string>
    <string name="region">Region</string>
    <string name="subregion">Subregion</string>
    <string name="population">Population</string>
    <string name="todo">TODO</string>
    <string name="dash">-</string>
</resources>