<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp"
    app:contentPadding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/imgFlag"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_launcher_foreground"/>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:padding="8dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

                    <TextView
                        android:id="@+id/capital"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/capital"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/region"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/region"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dash"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                    <TextView
                        android:id="@+id/subregion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subregion"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/population"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:layout_marginEnd="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/population"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/borders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:layout_marginEnd="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/borders"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/languages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:layout_marginEnd="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/languages"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>